@@ -19,8 +19,10 @@
 	    <tr>
 	      <td>Openflights URL</td>
 	      <td><INPUT type="text" name="myurl" style="border:none" size="40"></td>
-	    </tr>
-	    <tr>
+	    </tr><tr>
+	      <td style="vertical-align: top">Viewed</td>
+	      <td><input type="text" name="count" value="" style="border: none" READONLY></td>
+	    </tr><tr>
 	      <td>E-mail <i>(optional)</i>&nbsp;&nbsp;</td>
 	      <td><INPUT type="text" name="email" size="20"></td>
 	    </tr>
