@@ -18,7 +18,7 @@
     <script type="text/javascript" src="/js/controls.js"></script>
     <script type="text/javascript" src="/js/effects.js"></script>
     <script type="text/javascript" src="/js/hint-textbox.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20081202"></script>
+    <script type="text/javascript" src="/openflights.js?version=20081203"></script>
   </head>
 
   <body>
@@ -35,7 +35,7 @@
 	    <div id="maptitle">
 	    </div>
 
-	    <div id="news">
+	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
 	      <B>News</b>: 2 Dec 2008: <a href="/about.html#CHANGES">"Unknown" airlines now allowed.<br>CSV import, export and backup implemented.</a>
 	    </div>
@@ -53,7 +53,7 @@
 	    <div id="login">
 	      <div id="loginstatus" style="display: none"></div>
 	      
-	      <div id="loginform" style="display: inline">
+	      <div id="loginform" style="display: none">
 		<form name="login">
 		<table cellspacing="5" cellpadding="0" border="0">
 		  <tr><td>Username&nbsp;</td><td>
