@@ -1,3 +1,8 @@
+<b>2008-12-03</b>
+
+* Filter out airports with <2 flights at top zoom level if user has >200 flights
+* Log number of times map has been viewed, visible in Settings
+
 <b>2008-12-02</b>
 
 * Zoom map to fit when viewing another user's flights/trip
